--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
 "scripts": {
   "start": "concurrently \"npm run start:react\" \"npm run start:server\"",
-  "start:react": "cd client && npm start",  // Start the React app (in the client directory)
-  "start:server": "cd server && node server.js",  // Start the Express server (in the server directory)
+  "start:react": "cd client && npm start",
+  "start:server": "cd server && node server.js",
   "build": "react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
