--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-  "start": "concurrently \"npm run start:react\" \"npm run start:server\"",
-  "start:react": "cd client && npm start",
-  "start:server": "cd server && node server.js",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+ "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
